# pikocore

./: .gitignore  CMakeLists.txt  Makefile  target_compile_definitions.cmake.default  tusb_config.h
.github/workflows/: build.yml
audio2h/: main.go
cmake/: check_firmware_reserve.cmake
cmake/boards/: piko16mb.h
doth/: easing.h  filter.h  generate_easing.py  midi_out.h  usb_descriptors.c
src/: PikoAudioBank.cpp  PikoAudioBank.h  PikoBankLayout.cpp  PikoBankLayout.h  PikoSampleManager.cpp  PikoSampleManager.h  Settings.cpp  Settings.h  main.cpp
tests/: CMakeLists.txt  test_bank.cpp
web/: index.html  package-lock.json  package.json  serial-test.html  vite.config.ts
web/public/: pikocore-16mb.uf2  pikocore-2mb.uf2  pikocore-4mb.uf2
web/src/: App.tsx  audio.ts  bank.test.ts  bank.ts  main.tsx  serial.test.ts  serial.ts  styles.css
